Add markdown to CSV and Excel sections

--- a/pandas_11.ipynb
+++ b/pandas_11.ipynb
@@ -805,12 +805,14 @@
     "---\n",
     "## Excel - .xlsx and .xls\n",
     "\n",
-    "Excel files are Microsoft's proprietery spreadsheet files. \n",
+    "Excel files are Microsoft's proprietery spreadsheet files. XLSX is the new Excel file format and can be read only by Excel 2007 and later. XLS is the older file format and can be read by all versions.\n",
     "\n",
     "Unlike CSV files, reading and writing excel files require additional package installs:  \n",
     "`openpyxl` - for writing and reading xlsx, can also write to xls  \n",
-    "`xlwt` - for writing old xls  \n",
     "`xlrd` - for reading old xls  \n",
+    "\n",
+    "pip supports multiple installs in 1 expression if you want to install both:    \n",
+    "`pip install openpyxl xlrd`\n",
     "\n",
     "---"
    ]
@@ -828,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -944,6 +946,248 @@
     "# Reading\n",
     "excel_df = pd.read_excel(\"data/excel_new.xlsx\", index_col=0)\n",
     "display(excel_df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MainBranch</th>\n",
+       "      <th>Employment</th>\n",
+       "      <th>RemoteWork</th>\n",
+       "      <th>CodingActivities</th>\n",
+       "      <th>EdLevel</th>\n",
+       "      <th>LearnCode</th>\n",
+       "      <th>LearnCodeOnline</th>\n",
+       "      <th>LearnCodeCoursesCert</th>\n",
+       "      <th>YearsCode</th>\n",
+       "      <th>YearsCodePro</th>\n",
+       "      <th>...</th>\n",
+       "      <th>TimeSearching</th>\n",
+       "      <th>TimeAnswering</th>\n",
+       "      <th>Onboarding</th>\n",
+       "      <th>ProfessionalTech</th>\n",
+       "      <th>TrueFalse_1</th>\n",
+       "      <th>TrueFalse_2</th>\n",
+       "      <th>TrueFalse_3</th>\n",
+       "      <th>SurveyLength</th>\n",
+       "      <th>SurveyEase</th>\n",
+       "      <th>ConvertedCompYearly</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ResponseId</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>I am not primarily a developer, but I write co...</td>\n",
+       "      <td>Student, full-time</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Master’s degree (M.A., M.S., M.Eng., MBA, etc.)</td>\n",
+       "      <td>Books / Physical media;School (i.e., Universit...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>15</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Appropriate in length</td>\n",
+       "      <td>Easy</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>I am a developer by profession</td>\n",
+       "      <td>Employed, full-time</td>\n",
+       "      <td>Hybrid (some remote, some in-person)</td>\n",
+       "      <td>Hobby</td>\n",
+       "      <td>Master’s degree (M.A., M.S., M.Eng., MBA, etc.)</td>\n",
+       "      <td>Books / Physical media;Other online resources ...</td>\n",
+       "      <td>Technical documentation;Blogs;Written Tutorial...</td>\n",
+       "      <td>Coursera;Udemy;Codecademy;edX;Udacity</td>\n",
+       "      <td>16</td>\n",
+       "      <td>9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30-60 minutes a day</td>\n",
+       "      <td>60-120 minutes a day</td>\n",
+       "      <td>Somewhat short</td>\n",
+       "      <td>DevOps function;Microservices;Continuous integ...</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Appropriate in length</td>\n",
+       "      <td>Neither easy nor difficult</td>\n",
+       "      <td>90647.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>I am a developer by profession</td>\n",
+       "      <td>Employed, full-time</td>\n",
+       "      <td>Hybrid (some remote, some in-person)</td>\n",
+       "      <td>Hobby;Contribute to open-source projects</td>\n",
+       "      <td>Some college/university study without earning ...</td>\n",
+       "      <td>Books / Physical media;Other online resources ...</td>\n",
+       "      <td>Technical documentation;Blogs;Written Tutorial...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>40</td>\n",
+       "      <td>25</td>\n",
+       "      <td>...</td>\n",
+       "      <td>15-30 minutes a day</td>\n",
+       "      <td>Less than 15 minutes a day</td>\n",
+       "      <td>Just right</td>\n",
+       "      <td>Continuous integration (CI) and (more often) c...</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Appropriate in length</td>\n",
+       "      <td>Easy</td>\n",
+       "      <td>106644.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 78 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   MainBranch   \n",
+       "ResponseId                                                      \n",
+       "6           I am not primarily a developer, but I write co...  \\\n",
+       "26                             I am a developer by profession   \n",
+       "49                             I am a developer by profession   \n",
+       "\n",
+       "                     Employment                            RemoteWork   \n",
+       "ResponseId                                                              \n",
+       "6            Student, full-time                                   NaN  \\\n",
+       "26          Employed, full-time  Hybrid (some remote, some in-person)   \n",
+       "49          Employed, full-time  Hybrid (some remote, some in-person)   \n",
+       "\n",
+       "                                    CodingActivities   \n",
+       "ResponseId                                             \n",
+       "6                                                NaN  \\\n",
+       "26                                             Hobby   \n",
+       "49          Hobby;Contribute to open-source projects   \n",
+       "\n",
+       "                                                      EdLevel   \n",
+       "ResponseId                                                      \n",
+       "6             Master’s degree (M.A., M.S., M.Eng., MBA, etc.)  \\\n",
+       "26            Master’s degree (M.A., M.S., M.Eng., MBA, etc.)   \n",
+       "49          Some college/university study without earning ...   \n",
+       "\n",
+       "                                                    LearnCode   \n",
+       "ResponseId                                                      \n",
+       "6           Books / Physical media;School (i.e., Universit...  \\\n",
+       "26          Books / Physical media;Other online resources ...   \n",
+       "49          Books / Physical media;Other online resources ...   \n",
+       "\n",
+       "                                              LearnCodeOnline   \n",
+       "ResponseId                                                      \n",
+       "6                                                         NaN  \\\n",
+       "26          Technical documentation;Blogs;Written Tutorial...   \n",
+       "49          Technical documentation;Blogs;Written Tutorial...   \n",
+       "\n",
+       "                             LearnCodeCoursesCert YearsCode YearsCodePro  ...   \n",
+       "ResponseId                                                                ...   \n",
+       "6                                             NaN        15          NaN  ...  \\\n",
+       "26          Coursera;Udemy;Codecademy;edX;Udacity        16            9  ...   \n",
+       "49                                            NaN        40           25  ...   \n",
+       "\n",
+       "                  TimeSearching               TimeAnswering      Onboarding   \n",
+       "ResponseId                                                                    \n",
+       "6                           NaN                         NaN             NaN  \\\n",
+       "26          30-60 minutes a day        60-120 minutes a day  Somewhat short   \n",
+       "49          15-30 minutes a day  Less than 15 minutes a day      Just right   \n",
+       "\n",
+       "                                             ProfessionalTech TrueFalse_1   \n",
+       "ResponseId                                                                  \n",
+       "6                                                         NaN         NaN  \\\n",
+       "26          DevOps function;Microservices;Continuous integ...         Yes   \n",
+       "49          Continuous integration (CI) and (more often) c...         Yes   \n",
+       "\n",
+       "           TrueFalse_2  TrueFalse_3           SurveyLength   \n",
+       "ResponseId                                                   \n",
+       "6                  NaN          NaN  Appropriate in length  \\\n",
+       "26                  No          Yes  Appropriate in length   \n",
+       "49                  No          Yes  Appropriate in length   \n",
+       "\n",
+       "                            SurveyEase ConvertedCompYearly  \n",
+       "ResponseId                                                  \n",
+       "6                                 Easy                 NaN  \n",
+       "26          Neither easy nor difficult             90647.0  \n",
+       "49                                Easy            106644.0  \n",
+       "\n",
+       "[3 rows x 78 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Writing\n",
+    "display(df.head(3))\n",
+    "df.to_excel(\"new_files/new_excel.xlsx\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Reading and Writing .xls\n",
+    "\n",
+    "---"
    ]
   }
  ],
