Finish JSON section

--- a/pandas_11.ipynb
+++ b/pandas_11.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from IPython.display import display\n"
+    "from IPython.display import display"
    ]
   },
   {
@@ -42,7 +42,7 @@
     "    if s:\n",
     "        print(\"=\" * int(n / 2), s, \"=\" * int(n / 2))\n",
     "    else:\n",
-    "        print(\"=\" * n)\n"
+    "        print(\"=\" * n)"
    ]
   },
   {
@@ -285,7 +285,7 @@
     "# Load in csv as df and make the ResponseId the index\n",
     "df = pd.read_csv(\"data/survey_results_public_2022.csv\", index_col=\"ResponseId\")\n",
     "\n",
-    "df.head(3)"
+    "df.head(3)\n"
    ]
   },
   {
@@ -302,7 +302,7 @@
     "\n",
     "# Write to csv file. This will create a file named csv_file.csv\n",
     "# inside a folder named new_files\n",
-    "japan_df.to_csv(\"new_files/csv_file.csv\")"
+    "japan_df.to_csv(\"new_files/csv_file.csv\")\n"
    ]
   },
   {
@@ -555,7 +555,7 @@
     "display(germany_df.head(3))\n",
     "\n",
     "# Write\n",
-    "germany_df.to_csv(\"new_files/tsv_file.tsv\", sep=\"\\t\")\n"
+    "germany_df.to_csv(\"new_files/tsv_file.tsv\", sep=\"\\t\")"
    ]
   },
   {
@@ -797,7 +797,7 @@
    "source": [
     "# Load in tab separated values (tsv) to a DataFrame\n",
     "df = pd.read_csv(\"new_files/tsv_file.tsv\", sep=\"\\t\", index_col=\"ResponseId\")\n",
-    "display(df.head(3))"
+    "display(df.head(3))\n"
    ]
   },
   {
@@ -955,7 +955,7 @@
    "source": [
     "# Reading\n",
     "excel_df = pd.read_excel(\"data/excel_new.xlsx\", index_col=0)\n",
-    "display(excel_df.head())\n"
+    "display(excel_df.head())"
    ]
   },
   {
@@ -1186,7 +1186,7 @@
    "source": [
     "# Writing\n",
     "display(df.head(3))\n",
-    "df.to_excel(\"new_files/new_excel.xlsx\")\n"
+    "df.to_excel(\"new_files/new_excel.xlsx\")"
    ]
   },
   {
@@ -1321,7 +1321,7 @@
    "source": [
     "# Reading\n",
     "excel_old_df = pd.read_excel(\"data/excel_old.xls\", index_col=0)\n",
-    "display(excel_old_df.sample(5))\n"
+    "display(excel_old_df.sample(5))"
    ]
   },
   {
@@ -1552,7 +1552,7 @@
    "source": [
     "# Writing\n",
     "display(df.head(3))\n",
-    "df.to_excel(\"new_files/old_excel22.xls\", engine=\"xlsxwriter\")\n"
+    "df.to_excel(\"new_files/old_excel22.xls\", engine=\"xlsxwriter\")"
    ]
   },
   {
@@ -1611,7 +1611,7 @@
    "source": [
     "# Check sheet names using the sheet_name attribute of ExcelFile objects\n",
     "xl_file = pd.ExcelFile(\"data/excel_new.xlsx\")\n",
-    "xl_file.sheet_names\n"
+    "xl_file.sheet_names"
    ]
   },
   {
@@ -1732,7 +1732,7 @@
    "source": [
     "# Load 2nd sheet\n",
     "excel_df = pd.read_excel(\"data/excel_new.xlsx\", sheet_name=\"another sheet\", index_col=0)\n",
-    "excel_df.head()"
+    "excel_df.head()\n"
    ]
   },
   {
@@ -1793,7 +1793,7 @@
     "excel_dfs = pd.read_excel(\"data/excel_new.xlsx\", sheet_name=[\"Sheet1\", 2], index_col=0)\n",
     "\n",
     "# This creates a dict of DataFrames\n",
-    "display(excel_dfs)"
+    "display(excel_dfs)\n"
    ]
   },
   {
@@ -1988,7 +1988,7 @@
     "\n",
     "display(xl_df1.head(3))\n",
     "printhr()\n",
-    "display(xl_df2.head(3))\n"
+    "display(xl_df2.head(3))"
    ]
   },
   {
@@ -2110,7 +2110,7 @@
     "\n",
     "# Confirm\n",
     "xl_file = pd.ExcelFile(\"new_files/excel_sheet.xlsx\")\n",
-    "xl_file.sheet_names\n"
+    "xl_file.sheet_names"
    ]
   },
   {
@@ -2281,7 +2281,7 @@
     }
    ],
    "source": [
-    "# Write JSON file. \n",
+    "# Write JSON file.\n",
     "display(excel_df.head())\n",
     "\n",
     "# We'll use the previously loaded excel_df as our DataFrame\n",
@@ -2401,7 +2401,101 @@
     "json_df = pd.read_json(\"new_files/json_file.json\")\n",
     "\n",
     "# Load JSON using default parameters\n",
-    "display(json_df.head())"
+    "display(json_df.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>content</th>\n",
+       "      <th>user_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>My Updated Post</td>\n",
+       "      <td>My first updated post!\\r\\n\\r\\nThis is exciting!</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A Second Post</td>\n",
+       "      <td>This is a post from a different user...</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Top 5 Programming Lanaguages</td>\n",
+       "      <td>Te melius apeirian postulant cum, labitur admo...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sublime Text Tips and Tricks</td>\n",
+       "      <td>Ea vix dico modus voluptatibus, mel iudico sua...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Best Python IDEs</td>\n",
+       "      <td>Elit contentiones nam no, sea ut consul adipis...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          title   \n",
+       "0               My Updated Post  \\\n",
+       "1                 A Second Post   \n",
+       "2  Top 5 Programming Lanaguages   \n",
+       "3  Sublime Text Tips and Tricks   \n",
+       "4              Best Python IDEs   \n",
+       "\n",
+       "                                             content  user_id  \n",
+       "0    My first updated post!\\r\\n\\r\\nThis is exciting!        1  \n",
+       "1            This is a post from a different user...        2  \n",
+       "2  Te melius apeirian postulant cum, labitur admo...        1  \n",
+       "3  Ea vix dico modus voluptatibus, mel iudico sua...        1  \n",
+       "4  Elit contentiones nam no, sea ut consul adipis...        1  "
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Loading a JSON from an http url is also possible\n",
+    "json_link = \"https://raw.githubusercontent.com/CoreyMSchafer/code_snippets/master/Python/Flask_Blog/snippets/posts.json\"\n",
+    "json_online = pd.read_json(json_link)\n",
+    "json_online.head()\n"
    ]
   },
   {
@@ -2449,14 +2543,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>First Name</th>\n",
+       "      <th>Last Name</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Id</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Belinda</td>\n",
+       "      <td>Partain</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>37</td>\n",
+       "      <td>15/10/2017</td>\n",
+       "      <td>2564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Holly</td>\n",
+       "      <td>Eudy</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>52</td>\n",
+       "      <td>16/08/2016</td>\n",
+       "      <td>8561</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  First Name Last Name  Gender        Country  Age        Date    Id\n",
+       "0                                                                   \n",
+       "1    Belinda   Partain  Female  United States   37  15/10/2017  2564\n",
+       "2      Holly      Eudy  Female  United States   52  16/08/2016  8561"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# First write the JSON files with different orientations\n",
     "json_df = excel_df.head(2)\n",
+    "display(json_df)\n",
     "\n",
-    "# Write in \"columns\". Default DF orientation \n",
+    "# Write in \"columns\". Default DF orientation\n",
     "json_df.to_json(\"new_files/json_columns.json\")\n",
     "# \"records\" orientation\n",
     "json_df.to_json(\"new_files/json_records.json\", orient=\"records\")\n",
@@ -2470,7 +2641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -2664,98 +2835,160 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========================================\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>First Name</th>\n",
+       "      <th>Last Name</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Belinda</td>\n",
+       "      <td>Partain</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>37</td>\n",
+       "      <td>2017-10-15</td>\n",
+       "      <td>2564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Holly</td>\n",
+       "      <td>Eudy</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>52</td>\n",
+       "      <td>2016-08-16</td>\n",
+       "      <td>8561</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  First Name Last Name  Gender        Country  Age       Date    Id\n",
+       "0    Belinda   Partain  Female  United States   37 2017-10-15  2564\n",
+       "1      Holly      Eudy  Female  United States   52 2016-08-16  8561"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "# Let us view these text files\n",
+    "# Let's check if all the different structures are parsed correctly.\n",
+    "# Note that orientation is explicitly passed, otherwise it will throw an error.\n",
+    "\n",
     "jdf1 = pd.read_json(\"new_files/json_columns.json\")\n",
     "jdf2 = pd.read_json(\"new_files/json_records.json\", orient=\"records\")\n",
     "jdf3 = pd.read_json(\"new_files/json_records_lines.json\", orient=\"records\", lines=True)\n",
+    "\n",
     "display(jdf1)\n",
     "display(jdf2)\n",
-    "display(jdf3)"
+    "display(jdf3)\n",
+    "printhr()\n",
+    "\n",
+    "# They look to be the same aside from the index. I'm guessing this is because of how\n",
+    "# pandas parse the data. If we want to have zero-indexed index, we can just simply do:\n",
+    "jdf1.index = pd.RangeIndex(2)\n",
+    "display(jdf1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n",
+      "====================   orient=\"columns\" (default)   ====================\n",
       "\n",
-      "========================================\n",
+      "{\"First Name\":{\"1\":\"Belinda\",\"2\":\"Holly\"},\"Last Name\":{\"1\":\"Partain\",\"2\":\"Eudy\"},\"Gender\":{\"1\":\"Female\",\"2\":\"Female\"},\"Country\":{\"1\":\"United States\",\"2\":\"United States\"},\"Age\":{\"1\":37,\"2\":52},\"Date\":{\"1\":\"15\\/10\\/2017\",\"2\":\"16\\/08\\/2016\"},\"Id\":{\"1\":2564,\"2\":8561}}\n",
       "\n",
-      "[]\n",
+      "====================   orient=\"records\"   ====================\n",
       "\n",
-      "========================================\n",
+      "[{\"First Name\":\"Belinda\",\"Last Name\":\"Partain\",\"Gender\":\"Female\",\"Country\":\"United States\",\"Age\":37,\"Date\":\"15\\/10\\/2017\",\"Id\":2564},{\"First Name\":\"Holly\",\"Last Name\":\"Eudy\",\"Gender\":\"Female\",\"Country\":\"United States\",\"Age\":52,\"Date\":\"16\\/08\\/2016\",\"Id\":8561}]\n",
       "\n",
-      "[]\n"
+      "====================   orient=\"records\", lines=True   ====================\n",
+      "\n",
+      "{\"First Name\":\"Belinda\",\"Last Name\":\"Partain\",\"Gender\":\"Female\",\"Country\":\"United States\",\"Age\":37,\"Date\":\"15\\/10\\/2017\",\"Id\":2564}\n",
+      "{\"First Name\":\"Holly\",\"Last Name\":\"Eudy\",\"Gender\":\"Female\",\"Country\":\"United States\",\"Age\":52,\"Date\":\"16\\/08\\/2016\",\"Id\":8561}\n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "fpaths = [\n",
-    "    \"new_files/json_columns.json\",\n",
-    "    \"new_files/json_records.json\",\n",
-    "    \"new_files/json_records_lines.json\",\n",
+    "# These are how the data are stored in in text inside the JSON files.\n",
+    "# Directly viewing the JSON files is also recommended.\n",
+    "\n",
+    "# You do not need to understand how this cell works. It's here to show\n",
+    "# you the structure of JSON.\n",
+    "json_files = [\n",
+    "    [\"new_files/json_columns.json\", 'orient=\"columns\" (default)'],\n",
+    "    [\"new_files/json_records.json\", 'orient=\"records\"'],\n",
+    "    [\"new_files/json_records_lines.json\", 'orient=\"records\", lines=True'],\n",
     "]\n",
-    "for fpath in fpaths:\n",
-    "    with open(fpath) as jf:\n",
-    "        x = jf.read()\n",
-    "        y = jf.readlines()\n",
-    "        print(y)\n",
-    "        # print(len(y))\n",
     "\n",
-    "    if fpath != fpaths[len(fpaths) - 1]:\n",
+    "for orients in json_files:\n",
+    "    with open(orients[0]) as jf:\n",
+    "        printhr(f\"  {orients[1]}  \")\n",
     "        print()\n",
-    "        printhr()\n",
-    "        print()"
+    "        x = jf.read()\n",
+    "        print(x)\n",
+    "        print()\n",
+    "\n",
+    "# Except for the last JSON where we specified lines=True, the JSON is structured\n",
+    "# in a single line, and is common. Multilines JSON is there to help with readiblity.\n",
+    "# Functionally, single or multilines are the same.\n"
    ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
+    "---\n",
+    "## Database - my_sql (WIP)\n",
+    "\n",
     "#TODO\n",
-    "# Parsing JSON Draft\n",
     "\n",
-    "# df preview\n",
-    "display(df.sample(3))\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "## Sample Series\n",
-    "\n",
-    "# Series orient 1:  \n",
-    "# Sample DataFrame"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "csv\n",
-    "xlsx\n",
-    "json\n",
-    "    read json link: i.e. read_json(link)\n",
-    "\n",
-    "https://raw.githubusercontent.com/CoreyMSchafer/code_snippets/master/Python/Flask_Blog/snippets/posts.json\n",
-    "\n",
-    "sql db\n"
+    "---"
    ]
   }
  ],
