Update alternate df constructors section

--- a/pandas_01a.ipynb
+++ b/pandas_01a.ipynb
@@ -1115,7 +1115,6 @@
    ],
    "source": [
     "# Series as Data, example 2.\n",
-    "\n",
     "s = pd.Series(range(3), index=list(\"abc\"))\n",
     "display(s)\n",
     "printhr()\n",
@@ -1134,15 +1133,16 @@
     "---\n",
     "### Alternate DataFrame Constructors\n",
     "\n",
-    "#TODO read on [pandas docs](https://pandas.pydata.org/docs/user_guide/dsintro.html#alternate-constructors)  \n",
+    "DataFrame.from_dict()\n",
     "\n",
-    "DataFrame.from_dict\n",
+    "Takes a dict of dicts or a dict of array-like sequences and returns a DataFrame. It operates like the DataFrame constructor except for the orient parameter which is 'columns' by default, but can be set to 'index' in order to use the dict keys as row labels.\n",
     "\n",
-    "DataFrame.from_dict() takes a dict of dicts or a dict of array-like sequences and returns a DataFrame. It operates like the DataFrame constructor except for the orient parameter which is 'columns' by default, but which can be set to 'index' in order to use the dict keys as row labels.\n",
+    "DataFrame.from_records()\n",
     "\n",
-    "DataFrame.from_records\n",
+    "Takes a list of tuples or an ndarray with structured dtype. It works analogously to the normal DataFrame constructor, except that the resulting DataFrame index may be a specific field of the structured dtype.\n",
     "\n",
-    "DataFrame.from_records() takes a list of tuples or an ndarray with structured dtype. It works analogously to the normal DataFrame constructor, except that the resulting DataFrame index may be a specific field of the structured dtype.\n",
+    "More on [pandas docs](https://pandas.pydata.org/docs/user_guide/dsintro.html#alternate-constructors)  \n",
+    "\n",
     "\n",
     "---\n"
    ]
