Clarify note on viewing columns section

--- a/pandas_02.ipynb
+++ b/pandas_02.ipynb
@@ -173,7 +173,7 @@
     "---\n",
     "### Viewing columns and column data types\n",
     "\n",
-    "In pandas, columns can be referred to by using brackets or dot notation as follows:  \n",
+    "In pandas, columns can be referred to by using brackets (indexing) or dot notation as follows:  \n",
     "\n",
     "DataFrame[\"column_1\"]  \n",
     "or  \n",
